--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <url>http://maven.apache.org</url>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot-starter-web.version>1.5.2.RELEASE</spring-boot-starter-web.version>
         <junit.version>4.12</junit.version>
